<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_baseline_view_comfy_24"
            android:title="@string/month" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_baseline_calendar_view_day_24"
            android:title="@string/week" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_baseline_calendar_view_day_24"
            android:title="@string/day" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>