<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_month">

    <fragment
        android:id="@+id/nav_month"
        android:name="com.faffo.shifter.ui.mainscreen.month.MonthFragment"
        android:label="@string/month"
        tools:layout="@layout/fragment_month_standalone" />

    <fragment
        android:id="@+id/nav_week"
        android:name="com.faffo.shifter.ui.mainscreen.week.WeekFragment"
        android:label="@string/week"
        tools:layout="@layout/fragment_week_standalone" />

    <fragment
        android:id="@+id/nav_day"
        android:name="com.faffo.shifter.ui.mainscreen.day.DayFragment"
        android:label="@string/day"
        tools:layout="@layout/fragment_day_standalone" />

    <!--    <fragment-->
    <!--        android:id="@+id/nav_gallery"-->
    <!--        android:name="com.faffo.shifter.ui.gallery.GalleryFragment"-->
    <!--        android:label="@string/menu_gallery"-->
    <!--        tools:layout="@layout/fragment_gallery" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:name="com.faffo.shifter.ui.slideshow.SlideshowFragment"-->
    <!--        android:label="@string/menu_slideshow"-->
    <!--        tools:layout="@layout/fragment_slideshow" />-->
</navigation>